welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:14: error: ';' expected but 'else' found.
    else {gauche(); if (isFacingTrail()==true) { avance();
    ^SlugHunting:27: error: expected class or object definition
def isFacingTrail():Boolean = { 
^SlugHunting:47: error: Unmatched closing brace '}' ignored here
}
^